Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 <!-- HERO -->
 <section class="hero-section py-5 d-flex align-items-center">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center text-center text-md-start">
 
-      <div class="col-md-4 text-center mb-4 mb-md-0">
+      <!-- FOTO -->
+      <div class="col-md-4 mb-4 mb-md-0">
         <img src="img/fotoperfil.png"
              alt="Ricardo Melo – Legal Assistant Cork"
              class="img-fluid rounded-circle shadow"
              style="max-width: 220px;">
       </div>
 
-    <div class="col-md-8 text-center text-md-start">
-  <h1 class="fw-bold mb-2">
-    Ricardo Melo
-  </h1>
+      <!-- TEXTO -->
+      <div class="col-md-8">
+        <h1 class="fw-bold mb-2">
+          Ricardo Melo
+        </h1>
 
-  <h2 class="h6 text-muted">
-    Legal Assistant | Cork, Ireland
-  </h2>
-</div>
-
+        <h2 class="h6 text-muted mb-3">
+          Legal Assistant | Cork, Ireland
+        </h2>
 
         <p class="lead">
           Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>,
@@ -47,14 +47,19 @@
         </p>
 
         <div class="mt-4">
-          <a href="professional_profile.html" class="btn btn-dark me-2">Professional Profile</a>
-          <a href="legal_publication.html" class="btn btn-outline-dark">Legal Publication</a>
+          <a href="professional_profile.html" class="btn btn-dark me-2">
+            Professional Profile
+          </a>
+          <a href="legal_publication.html" class="btn btn-outline-dark">
+            Legal Publication
+          </a>
         </div>
       </div>
 
     </div>
   </div>
 </section>
+
 
 <!-- CORE COMPETENCIES -->
 <section class="py-5 bg-light">
@@ -257,6 +262,7 @@
 
 </body>
 </html>
+
 
 
 
