--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
       <!-- TEXTO -->
       <div class="col-md-8">
-        <h1 class="fw-bold mb-2">
-          Ricardo Melo
+       <h1 class="fw-bold mb-2 text-center text-md-start">
+        Ricardo Melo
         </h1>
+
 
         <h2 class="h6 text-muted mb-3">
           Legal Assistant | Cork, Ireland
@@ -262,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
