--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- TEXTO -->
       <div class="col-md-8">
-       <h1 class="text-muted mb-3">
+       <h1 class="fw-bold text-muted mb-3">
         Ricardo Melo
         </h1>
 
@@ -263,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
