Add professional contact information section
Added professional contact section with email, phone, and location.

--- a/professional_profile.html
+++ b/professional_profile.html
@@ -123,6 +123,18 @@
   </div>
 </section>
 
+      <section class="py-5 bg-light" id="contact">
+  <div class="container">
+    <h3 class="fw-bold text-center mb-4">Professional Contact</h3>
+
+    <!-- Contact Info -->
+    <div class="contact-info mb-4 text-center">
+      <p><i class="fas fa-envelope me-2"></i> ricardoadevmelo@gmail.com</p>
+      <p><i class="fas fa-phone me-2"></i> +353-83-056-9070</p>
+      <p><i class="fas fa-map-marker-alt me-2"></i> Cork, Ireland</p>
+    </div>
+      </section>
+
 <!-- FOOTER -->
 <footer class="pt-4 pb-3 border-top">
   <div class="container text-center">
@@ -179,6 +191,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
