--- a/legal_publication.html
+++ b/legal_publication.html
@@ -25,8 +25,9 @@
              class="img-fluid rounded-circle shadow"
              style="max-width: 220px;">
       </div>
+
       <div class="col-md-8">
-        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+        <h1 class="fw-bold text-muted mb-3">Ricardo Melo</h1>
         <h2 class="h5 text-muted mb-3">
           Legal Assistant & Legal Secretary | Cork, Ireland
         </h2>
@@ -188,6 +189,7 @@
 </script>
 </body>
 </html>
+
 
 
 
