Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 
       <!-- TEXTO -->
       <div class="col-md-8">
-       <h1 class="fw-bold text-muted mb-3">
+       <h1 class="fw-bold mb-3">
         Ricardo Melo
         </h1>
-
-
         <h2 class="h6 text-muted mb-3">
           Legal Assistant | Cork, Ireland
         </h2>
@@ -263,6 +261,7 @@
 
 </body>
 </html>
+
 
 
 
